Update column name

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <th data-toggle="tooltip" title="Total Downvotes"><div class="tablesorter-header-inner"><i class="fas fa-thumbs-down"></i></div></th>
                 <th data-toggle="tooltip" title="Approval Rating<br>(Upvotes Percentage)"><div class="tablesorter-header-inner"><i class="fas fa-percent"></i><i class="fas fa-thumbs-up"></i></div></th>
                 <th data-toggle="tooltip" title="Total Uploaded Maps"><div class="tablesorter-header-inner"><i class="fas fa-layer-group"></i>Maps</div></th>
-                <th data-toggle="tooltip" title="Average Votes per Map"><div class="tablesorter-header-inner"><i class="fas fa-divide"></i>Avg.<br>Votes</div></th>
+                <th data-toggle="tooltip" title="Average Score per Map"><div class="tablesorter-header-inner"><i class="fas fa-divide"></i>Avg.<br>Score</div></th>
                 <th data-toggle="tooltip" title="Total Downloads"><div class="tablesorter-header-inner"><i class="fas fa-download"></i>D/Ls</div></th>
                 <th data-toggle="tooltip" title="Maps in Curator Recommended Feed"><div class="tablesorter-header-inner"><i class="fas fa-star"></i>Curator<br>Recomm.</div></th>
                 <th data-toggle="tooltip" title="Times Included<br>in Curated Playlists"><div class="tablesorter-header-inner"><i class="fas fa-gem"></i>Featured<br>in Playlists</div></th>
