--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </ul>
             </div>
             <div class="card-footer text-center">
-                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Stats Last Updated: <strong>9 May 2019</strong></p>
+                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Stats Last Updated: <strong>10 May 2019</strong></p>
             </div>
         </div>
         <div class="card shadow-sm global px-0 mx-0">
@@ -90,13 +90,13 @@
         <table class="table table-sm table-bordered table-striped table-hover mb-0" id="mappers">
             <thead class="thead-dark">
             <tr>
-                <th data-toggle="tooltip" title="Row Number"><div class="tablesorter-header-inner"><i class="fas fa-hashtag"></i></div></th>
-                <th data-toggle="tooltip" title="Place (by Upvotes)"><div class="tablesorter-header-inner"><i class="fas fa-medal"></i></div></th>
-                <th data-toggle="tooltip" title="Avatar from BSaber"><div class="tablesorter-header-inner"><i class="fas fa-portrait"></i></div></th>
-                <th data-toggle="tooltip" title="Mapper Name<br>from BeatSaver" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-vr-cardboard"></i>Mapper</div></th>
-                <th data-toggle="tooltip" title="Total Upvotes"><div class="tablesorter-header-inner"><i class="fas fa-thumbs-up"></i></div></th>
-                <th data-toggle="tooltip" title="Total Downvotes"><div class="tablesorter-header-inner"><i class="fas fa-thumbs-down"></i></div></th>
-                <th data-toggle="tooltip" title="Approval Rating<br>(Upvotes Percentage)"><div class="tablesorter-header-inner"><i class="fas fa-percent"></i><i class="fas fa-thumbs-up"></i></div></th>
+                <th data-toggle="tooltip" title="Row Number" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-hashtag mr-0"></i></div></th>
+                <th data-toggle="tooltip" title="Place (by Upvotes)" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-medal mr-0"></i></div></th>
+                <th data-toggle="tooltip" title="Avatar from BSaber" class="width-image"><div class="tablesorter-header-inner"><i class="fas fa-portrait mr-0"></i></div></th>
+                <th data-toggle="tooltip" title="Mapper Name<br>from BeatSaver" data-placeholder="Text.."><div class="tablesorter-header-inner font-weight-bold"><i class="fas fa-vr-cardboard"></i>Mapper</div></th>
+                <th data-toggle="tooltip" title="Total Upvotes"><div class="tablesorter-header-inner"><i class="fas fa-thumbs-up mr-0"></i></div></th>
+                <th data-toggle="tooltip" title="Total Downvotes"><div class="tablesorter-header-inner"><i class="fas fa-thumbs-down mr-0"></i></div></th>
+                <th data-toggle="tooltip" title="Approval Rating<br>(Upvotes Percentage)"><div class="tablesorter-header-inner"><i class="fas fa-percent mr-0"></i><i class="fas fa-thumbs-up mr-0"></i></div></th>
                 <th data-toggle="tooltip" title="Total Uploaded Maps"><div class="tablesorter-header-inner"><i class="fas fa-layer-group"></i>Maps</div></th>
                 <th data-toggle="tooltip" title="Number of Scores<br>on ScoreSaber"><div class="tablesorter-header-inner"><i class="fas fa-flag-checkered"></i>Plays</div></th>
                 <th data-toggle="tooltip" title="Appreciation Rating<br>(Likes − Dislikes) / Plays"><div class="tablesorter-header-inner"><i class="fas fa-heart"></i>Rating</div></th>
