--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="/img/top-mappers-logo.png" class="img-fluid" alt="Top Mappers Logo">
 </div>
 
-<div class="container-fluid px-4">
+<div class="container-fluid px-4" id="header">
     <div class="card-deck">
         <div class="card shadow-sm">
             <div class="card-header text-center">
