--- a/testplays.html
+++ b/testplays.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/css/jquery.tablesorter.pager.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.5.4/video-js.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/videojs-overlay@2.1.4/dist/videojs-overlay.css">
     <link rel="stylesheet" href="/custom.css">
 </head>
 <body class="d-flex flex-column h-100">
@@ -43,7 +44,7 @@
                 </ul>
             </div>
             <div class="card-footer text-center">
-                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Stats Last Updated: <strong>11 May 2019</strong></p>
+                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Page Last Updated: <strong>12 May 2019</strong></p>
             </div>
         </div>
         <div class="card shadow-sm global px-0 mx-0">
@@ -92,7 +93,7 @@
         <table class="table table-borderless mb-0 d-block" id="testplays">
             <thead class="thead-dark d-block mb-3">
             <tr class="d-flex">
-                <th data-toggle="tooltip" title="Testplayer Name" class="filter-select filter-onlyAvail flex-fill w-25 mb-0" data-placeholder="Select.."><div class="tablesorter-header-inner"><i class="fas fa-vr-cardboard"></i>Testplayer</div></th>
+                <th data-toggle="tooltip" title="Testplayer Name" class="flex-fill w-25 mb-0" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-vr-cardboard"></i>Testplayer</div></th>
                 <th data-toggle="tooltip" title="Video Title" class="flex-fill w-25 mb-0" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-file-video"></i>Video Title</div></th>
                 <th data-toggle="tooltip" title="Upload Date" class="flex-fill w-25 mb-0" data-placeholder="Date.."><div class="tablesorter-header-inner"><i class="fas fa-calendar-alt"></i>Date</div></th>
             </tr>
@@ -165,6 +166,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.5.4/video.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/videojs-playlist@4.3.1/dist/videojs-playlist.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/videojs-overlay@2.1.4/dist/videojs-overlay.min.js"></script>
 
 <div class="text-muted py-4 text-center bg-dark mt-auto">
     <a href="#" id="scroll-top" class="h4 text-light"><i class="fas fa-chevron-up"></i> Back to Top <i class="fas fa-chevron-up"></i></a>
