--- a/ranked.html
+++ b/ranked.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/css/jquery.tablesorter.pager.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.5.4/video-js.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/videojs-overlay@2.1.4/dist/videojs-overlay.css">
     <link rel="stylesheet" href="/custom.css">
 </head>
 <body class="d-flex flex-column h-100">
@@ -43,7 +44,7 @@
                 </ul>
             </div>
             <div class="card-footer text-center">
-                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Stats Last Updated: <strong>11 May 2019</strong></p>
+                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Page Last Updated: <strong>12 May 2019</strong></p>
             </div>
         </div>
         <div class="card shadow-sm global px-0 mx-0">
