Add autoplay toggle and players reload buttons

--- a/testplays.html
+++ b/testplays.html
@@ -86,6 +86,8 @@
         <div class="btn-group">
             <button type="button" class="btn btn-lg btn-primary" id="reset-sort">Reset Sorting</button>
             <button type="button" class="btn btn-lg btn-info" id="reset-filter">Reset Filters</button>
+            <button type="button" class="btn btn-lg btn-warning" id="reload">Reload Players</button>
+            <button type="button" class="btn btn-lg btn-success" id="autoplay">Autoplay Enabled</button>
         </div>
     </div>
 
