--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="container-fluid px-4 text-center">
     <a href="/" class="btn btn-lg btn-outline-primary btn-nav mr-4 mb-4">Top Mappers (1000 Total)</a>
     <a href="/ranked.html" class="btn btn-lg btn-outline-info btn-nav mr-4 mb-4">Ranked Boards (2333 Total)</a>
-    <a href="/testplays.html" class="btn btn-lg btn-outline-success btn-nav mb-4">Testplays (7 Total)</a>
+    <a href="/testplays.html" class="btn btn-lg btn-outline-success btn-nav mb-4">Testplays Archive (7 Videos)</a>
 </div>
 
 <div class="container-fluid px-4" id="header">
@@ -49,7 +49,7 @@
                 </ul>
             </div>
             <div class="card-footer text-center">
-                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Page Last Updated: <strong>12 May 2019</strong></p>
+                <p class="card-text text-muted"><i class="fas fa-calendar-check"></i>Page Last Updated: <strong>13 May 2019</strong></p>
             </div>
         </div>
         <div class="card shadow-sm global px-0 mx-0">
