--- a/ranked.html
+++ b/ranked.html
@@ -30,7 +30,7 @@
 <div class="container-fluid px-4 text-center">
     <a href="/" class="btn btn-lg btn-outline-primary btn-nav mr-4 mb-4">Top Mappers (1000 Total)</a>
     <a href="/ranked.html" class="btn btn-lg btn-outline-info btn-nav mr-4 mb-4">Ranked Boards (2338 Total)</a>
-    <a href="/testplays.html" class="btn btn-lg btn-outline-success btn-nav mb-4">Testplays Archive ( Videos)</a>
+    <a href="/testplays.html" class="btn btn-lg btn-outline-success btn-nav mb-4">Testplays Archive (1771 Videos)</a>
 </div>
 
 <div class="container-fluid px-4" id="header">
