Update Map Key tooltip, add header to archive page

--- a/ranked.html
+++ b/ranked.html
@@ -120,7 +120,7 @@
                 <th data-toggle="tooltip" title="ScoreSaber Leaderboard"><div class="tablesorter-header-inner"><i class="fas fa-medal mr-0"></i></div></th>
                 <th data-toggle="tooltip" title="BeatSaver Link" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-link mr-0"></i></div></th>
                 <th data-toggle="tooltip" title="Map Preview" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-play-circle mr-0"></i></div></th>
-                <th data-toggle="tooltip" title="Map Key" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-key"></i>Map ID</div></th>
+                <th data-toggle="tooltip" title="Map Key<br>(Click to Copy)" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-key"></i>Map ID</div></th>
                 <th data-toggle="tooltip" title="Map Download" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-file-download mr-0"></i></div></th>
             </tr>
             </thead>
