--- a/recommended.html
+++ b/recommended.html
@@ -114,7 +114,7 @@
                 <th data-toggle="tooltip" title="BeastSaber Link" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-atlas mr-0"></i></div></th>
                 <th data-toggle="tooltip" title="BeatSaver Link" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-link mr-0"></i></div></th>
                 <th data-toggle="tooltip" title="Map Preview" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-play-circle mr-0"></i></div></th>
-                <th data-toggle="tooltip" title="Map Key" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-key"></i>Map ID</div></th>
+                <th data-toggle="tooltip" title="Map Key<br>(Click to Copy)" data-placeholder="Text.."><div class="tablesorter-header-inner"><i class="fas fa-key"></i>Map ID</div></th>
                 <th data-toggle="tooltip" title="Map Download" class="width-index"><div class="tablesorter-header-inner"><i class="fas fa-file-download mr-0"></i></div></th>
             </tr>
             </thead>
