Add total ranked maps number

--- a/ranked.html
+++ b/ranked.html
@@ -87,7 +87,7 @@
     </div>
 </div>
 <div class="container-fluid px-4 my-4">
-    <h1 class="text-center mb-4">Ranked Leaderboards (693 Total)</h1>
+    <h1 class="text-center mb-4">Ranked Leaderboards (693 Total) of 422 Maps</h1>
     <div class="table-buttons mb-4 text-center">
         <div class="btn-group">
             <button type="button" class="btn btn-lg btn-primary" id="reset-sort">Reset Sorting</button>
