--- a/ranked.html
+++ b/ranked.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.5.4/video-js.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/videojs-overlay@2.1.4/dist/videojs-overlay.css">
     <link rel="stylesheet" href="/custom.css">
+
+    <meta property="og:site_name" content="TopMappers">
+    <meta property="og:title" content="Top Beat Saber Mappers">
+    <meta property="og:description" content="Mapper stats, playlist generator, recommended maps, ranked boards, testplays archive">
+    <meta property="og:image" content="https://topmappers.nikis.me/img/android-chrome-192x192.png">
+    <meta name="theme-color" content="#E9ECEF">
 </head>
 <body class="d-flex flex-column h-100">
 
