--- a/painter.html
+++ b/painter.html
@@ -7,11 +7,11 @@
 
     <title>Top Beat Saber Mappers</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/css/theme.bootstrap_4.min.css">
@@ -21,12 +21,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/videojs-overlay@2.1.4/dist/videojs-overlay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tippy.js/3.4.1/tippy.css" />
-    <link rel="stylesheet" href="/custom.css">
+    <link rel="stylesheet" href="custom.css">
 
     <meta property="og:site_name" content="TopMappers">
     <meta property="og:title" content="Top Beat Saber Mappers">
     <meta property="og:description" content="Mapper stats, playlist generator, pattern painter, ranked boards, testplays archive">
-    <meta property="og:image" content="https://topmappers.nikis.me/img/android-chrome-192x192.png">
+    <meta property="og:image" content="https://n3tman.github.io/TopMappers/img/android-chrome-192x192.png">
     <meta name="theme-color" content="#E9ECEF">
 </head>
 <body class="d-flex flex-column h-100">
@@ -40,18 +40,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/js/parsers/parser-input-select.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
-<script src="/custom.js"></script>
+<script src="custom.js"></script>
 
 <div class="jumbotron py-4 mb-4 text-center rounded-0">
-    <img src="/img/top-mappers-logo.png" class="img-fluid" alt="Top Mappers Logo">
+    <img src="img/top-mappers-logo.png" class="img-fluid" alt="Top Mappers Logo">
 </div>
 
 <div class="container-fluid px-4 text-center">
-    <a href="/" class="btn btn-lg btn-outline-dark btn-nav mr-4 mb-4">Top Mappers (1000)</a>
-    <!--<a href="/recommended.html" class="btn btn-lg btn-outline-primary btn-nav mr-4 mb-4">Recommended Maps (1636)</a>-->
-    <a href="/ranked.html" class="btn btn-lg btn-outline-info btn-nav mr-4 mb-4">Ranked Boards (682)</a>
-    <a href="/testplays.html" class="btn btn-lg btn-outline-success btn-nav mr-4 mb-4">Testplays Archive (2107)</a>
-    <a href="/painter.html" class="btn btn-lg btn-outline-danger btn-nav mb-4">Pattern Painter (New)</a>
+    <a href="" class="btn btn-lg btn-outline-dark btn-nav mr-4 mb-4">Top Mappers (1000)</a>
+    <!--<a href="recommended.html" class="btn btn-lg btn-outline-primary btn-nav mr-4 mb-4">Recommended Maps (1636)</a>-->
+    <a href="ranked.html" class="btn btn-lg btn-outline-info btn-nav mr-4 mb-4">Ranked Boards (682)</a>
+    <a href="testplays.html" class="btn btn-lg btn-outline-success btn-nav mr-4 mb-4">Testplays Archive (2107)</a>
+    <a href="painter.html" class="btn btn-lg btn-outline-danger btn-nav mb-4">Pattern Painter (New)</a>
 </div>
 
 <div class="container-fluid px-4" id="header">
@@ -106,6 +106,7 @@
         </div>
     </div>
 </div>
+
 <div class="container-fluid px-4 my-4">
     <h1 class="text-center mb-4">Pattern Painter</h1>
     <div class="card painter">
@@ -114,9 +115,9 @@
             <div class="wrapper">
                 <table class="grid red active" id="red">
                     <tr>
-                        <td data-name="noteRUL"><img src="/img/patterns/noteRUL.png"></td>
-                        <td data-name="noteRU"><img src="/img/patterns/noteRU.png"></td>
-                        <td data-name="noteRUR"><img src="/img/patterns/noteRUR.png"></td>
+                        <td data-name="noteRUL"><img src="img/patterns/noteRUL.png"></td>
+                        <td data-name="noteRU"><img src="img/patterns/noteRU.png"></td>
+                        <td data-name="noteRUR"><img src="img/patterns/noteRUR.png"></td>
                     </tr>
                     <tr>
                         <th>Q</th>
@@ -124,9 +125,9 @@
                         <th>E</th>
                     </tr>
                     <tr>
-                        <td data-name="noteRL"><img src="/img/patterns/noteRL.png"></td>
-                        <td data-name="noteRND"><img src="/img/patterns/noteRND.png"></td>
-                        <td data-name="noteRR"><img src="/img/patterns/noteRR.png"></td>
+                        <td data-name="noteRL"><img src="img/patterns/noteRL.png"></td>
+                        <td data-name="noteRND"><img src="img/patterns/noteRND.png"></td>
+                        <td data-name="noteRR"><img src="img/patterns/noteRR.png"></td>
                     </tr>
                     <tr>
                         <th>A</th>
@@ -134,9 +135,9 @@
                         <th>D</th>
                     </tr>
                     <tr>
-                        <td data-name="noteRDL"><img src="/img/patterns/noteRDL.png"></td>
-                        <td data-name="noteRD"><img src="/img/patterns/noteRD.png"></td>
-                        <td data-name="noteRDR"><img src="/img/patterns/noteRDR.png"></td>
+                        <td data-name="noteRDL"><img src="img/patterns/noteRDL.png"></td>
+                        <td data-name="noteRD"><img src="img/patterns/noteRD.png"></td>
+                        <td data-name="noteRDR"><img src="img/patterns/noteRDR.png"></td>
                     </tr>
                     <tr>
                         <th>Z</th>
@@ -146,9 +147,9 @@
                 </table>
                 <table class="grid blue" id="blue">
                     <tr>
-                        <td data-name="noteBUL"><img src="/img/patterns/noteBUL.png"></td>
-                        <td data-name="noteBU"><img src="/img/patterns/noteBU.png"></td>
-                        <td data-name="noteBUR"><img src="/img/patterns/noteBUR.png"></td>
+                        <td data-name="noteBUL"><img src="img/patterns/noteBUL.png"></td>
+                        <td data-name="noteBU"><img src="img/patterns/noteBU.png"></td>
+                        <td data-name="noteBUR"><img src="img/patterns/noteBUR.png"></td>
                     </tr>
                     <tr>
                         <th>Q</th>
@@ -156,9 +157,9 @@
                         <th>E</th>
                     </tr>
                     <tr>
-                        <td data-name="noteBL"><img src="/img/patterns/noteBL.png"></td>
-                        <td data-name="noteBND"><img src="/img/patterns/noteBND.png"></td>
-                        <td data-name="noteBR"><img src="/img/patterns/noteBR.png"></td>
+                        <td data-name="noteBL"><img src="img/patterns/noteBL.png"></td>
+                        <td data-name="noteBND"><img src="img/patterns/noteBND.png"></td>
+                        <td data-name="noteBR"><img src="img/patterns/noteBR.png"></td>
                     </tr>
                     <tr>
                         <th>A</th>
@@ -166,9 +167,9 @@
                         <th>D</th>
                     </tr>
                     <tr>
-                        <td data-name="noteBDL"><img src="/img/patterns/noteBDL.png"></td>
-                        <td data-name="noteBD"><img src="/img/patterns/noteBD.png"></td>
-                        <td data-name="noteBDR"><img src="/img/patterns/noteBDR.png"></td>
+                        <td data-name="noteBDL"><img src="img/patterns/noteBDL.png"></td>
+                        <td data-name="noteBD"><img src="img/patterns/noteBD.png"></td>
+                        <td data-name="noteBDR"><img src="img/patterns/noteBDR.png"></td>
                     </tr>
                     <tr>
                         <th>Z</th>
@@ -178,19 +179,19 @@
                 </table>
                 <table class="grid other" id="other">
                     <tr>
-                        <td data-name="Wall"><img src="/img/patterns/Wall.png"></td>
+                        <td data-name="Wall"><img src="img/patterns/Wall.png"></td>
                     </tr>
                     <tr>
                         <th>R</th>
                     </tr>
                     <tr>
-                        <td data-name="bomb~1"><img src="/img/patterns/bomb.png"></td>
+                        <td data-name="bomb~1"><img src="img/patterns/bomb.png"></td>
                     </tr>
                     <tr>
                         <th>F</th>
                     </tr>
                     <tr>
-                        <td data-name="anone"><img src="/img/patterns/anone.png"></td>
+                        <td data-name="anone"><img src="img/patterns/anone.png"></td>
                     </tr>
                     <tr>
                         <th>V</th>
@@ -198,7 +199,7 @@
                 </table>
                 <table class="grid preview" id="preview">
                     <tr>
-                        <td class="skip"><img src="/img/patterns/anone.png"></td>
+                        <td class="skip"><img src="img/patterns/anone.png"></td>
                     </tr>
                     <tr>
                         <th>Selected</th>
@@ -218,22 +219,22 @@
                 <div class="grid-wrapper">
                     <table class="grid">
                         <tr>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
                         </tr>
                         <tr>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
                         </tr>
                         <tr>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
-                            <td data-name="anone"><img src="/img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
+                            <td data-name="anone"><img src="img/patterns/anone.png"></td>
                         </tr>
                     </table>
                 </div>
@@ -253,8 +254,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tippy.js/3.4.1/tippy.min.js"></script>
-<script src="/scripts/hotkeys.min.js"></script>
-<script src="/scripts/discord.js"></script>
+<script src="scripts/hotkeys.min.js"></script>
+<script src="scripts/discord.js"></script>
+
 
 <div class="text-muted py-4 text-center bg-dark mt-auto">
     <a href="#" id="scroll-top" class="h4 text-light"><i class="fas fa-chevron-up"></i> Back to Top <i class="fas fa-chevron-up"></i></a>
