--- a/painter.html
+++ b/painter.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="container-fluid px-4 text-center">
-    <a href="" class="btn btn-lg btn-outline-dark btn-nav mr-4 mb-4">Top Mappers (1000)</a>
+    <a href="index.html" class="btn btn-lg btn-outline-dark btn-nav mr-4 mb-4">Top Mappers (1000)</a>
     <!--<a href="recommended.html" class="btn btn-lg btn-outline-primary btn-nav mr-4 mb-4">Recommended Maps (1636)</a>-->
     <a href="ranked.html" class="btn btn-lg btn-outline-info btn-nav mr-4 mb-4">Ranked Boards (682)</a>
     <a href="testplays.html" class="btn btn-lg btn-outline-success btn-nav mr-4 mb-4">Testplays Archive (2107)</a>
