--- a/painter.html
+++ b/painter.html
@@ -100,7 +100,7 @@
                 </ul>
             </div>
             <div class="card-footer text-center">
-                <p class="card-text text-muted"><i class="fas fa-copyright"></i>TopMappers by <span class="discord"><i class="bg-n3tman"></i><strong>Nik</strong>#1471</span></p>
+                <p class="card-text text-muted"><i class="fas fa-copyright"></i>TopMappers by <span class="discord"><i class="bg-n3tman"></i><a href="https://bsaber.com/members/n3tman/" target="_blank" style="vertical-align: middle"><strong>n3tman</strong></a></span></p>
             </div>
         </div>
     </div>
